<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!-- <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" /> -->

    <TextView
        android:id="@+id/question"
        android:text="@string/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/question"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/odds"
        android:layout_below="@id/question"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/gen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="generation"
        android:layout_below="@id/odds"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_box"
        android:layout_below="@id/gen_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/result_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_button"
        android:text="@string/clear_results"
        android:onClick="clear"
        android:layout_below="@id/result_view"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
